--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
@@ -47,11 +48,11 @@
           <div class="toast-header bg-dark">
             <img src="/assets/images/avatar.jpg" class="rounded me-2" draggable="false" style="width: 23px;">
             <strong class="me-auto bg-dark" style="color: white;cursor: default;">dontkillme</strong>
-            <small style="color: white;cursor: default;">Just now</small>
+            <small style="color: white;cursor: default;" data-translate="toastdate">Just now</small>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" data-bs-toggle="tooltip" title="Close" data-bs-autohide="false"></button>
           </div>
           <div class="toast-body bg-dark" style="color: white;cursor: default;">
-            The policy of all browsers prohibits auto-playback of content (including music) if you have not interacted with the site before. Right now I don't have the resources and time to fix it. I will do it ASAP, thanks for your understanding!
+            <span data-translate="toastautoplay">The policy of all browsers prohibits auto-playback of content (including music) if you have not interacted with the site before. Right now I don't have the resources and time to fix it. I will do it ASAP, thanks for your understanding!</span>
           </div>
         </div>
       </div>
@@ -117,28 +118,32 @@
                         <li>
                             <a href="https://git-scm.com" target="_blank" rel="noopener noreferrer"><div class="marquee-content popperjs rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="h-6" draggable="false"> <span>Git</span></div></a>
                         </li>
+                        <li>
+                            <a href="https://xenforo.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content popperjs rounded-default"><img src="https://upload.wikimedia.org/wikipedia/en/e/e5/XenForo%C2%AE_logo_on_blue_square_background.png" class="h-6" draggable="false"> <span>xenForo</span></div></a>
+                        </li>
                     </ul>
                 </marquee>
             </div><br>
             <div class="buttons-collapse-container">
-                <a data-bs-toggle="collapse" href="#collapseOverall"><button class="btn btn-dark btn-sm customsize bigger" id="more"><i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: white;" id="circlebutton"></i> More about me</button></span></a>
-                <button class="btn btn-dark btn-sm customsize bigger">NoMeta</button>
+                <a data-bs-toggle="collapse" href="#collapseOverall"><button class="btn btn-dark btn-sm customsize bigger" id="more" data-translate="btnmore"><i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: white;" id="circlebutton"></i> More about me</button></span></a>
+                <a href="/nometa.html"><button class="btn btn-dark btn-sm customsize bigger"><i class="bi bi-x-circle-fill" aria-hidden="true" style="font-size: 14px;color: white;"></i> NoMeta</button></a>
             </div>
                 <div class="collapse" id="collapseOverall">
-                    <p style="color: white;">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
+                    <p style="color: white;" data-translate="moreinfo">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
                 </div>
             
         </div>
     </div>
 </main>
 <footer class="center-h fullwidth">
-    <span style="color: rgba(255, 255, 255, 0.637);">Made with <a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">Bootstrap</a>, <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a>, and <span style="color: rgb(255, 101, 101);">&hearts;</span> by <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer">me</a></span>
+    <span style="color: rgba(255, 255, 255, 0.637);" data-translate="madeby">Made with Bootstrap, jQuery, and <span style="color: rgb(255, 101, 101);">&hearts;</span> by me</span>
 </footer>
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="/js/script.js"></script>
 <script src="/js/index.js"></script>
 <script src="/js/counter.js"></script>
+<script src="/js/translations/indexTranslations.js"></script>
 <script src="/assets/js/snippets.js"></script>
 </body>
 </html>
