--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+    <link rel="manifest" href="./assets/site.webmanifest">
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -26,7 +26,6 @@
         function noselect() {
             return false;
         }
-    </script>
     </script>
     <!-- Styles -->
     <style media="all" id="fa-v4-font-face">
@@ -46,7 +45,7 @@
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header bg-dark">
-            <img src="/assets/images/avatar.jpg" class="rounded me-2" draggable="false" style="width: 23px;">
+            <img src="./assets/images/avatar.jpg" class="rounded me-2" draggable="false" style="width: 23px;">
             <strong class="me-auto bg-dark" style="color: white;cursor: default;">dontkillme</strong>
             <small style="color: white;cursor: default;" data-translate="toastdate">Just now</small>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" data-bs-toggle="tooltip" title="Close" data-bs-autohide="false"></button>
@@ -98,7 +97,7 @@
                             <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer"><div class="marquee-content css rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="h-6" draggable="false"> <span>CSS</span></div></a>
                         </li>
                         <li>
-                            <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content jquery rounded-default"><img src="/assets/images/file646cb188c7fb8.png" class="h-6" draggable="false"> <span>jQuery</span></div></a>
+                            <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content jquery rounded-default"><img src="./assets/images/file646cb188c7fb8.png" class="h-6" draggable="false"> <span>jQuery</span></div></a>
                         </li>
                         <li>
                             <a href="https://www.cloudflare.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content cloudflare rounded-default"><img src="https://r2.e-z.host/2082d908-7c65-4fc3-b02a-5f50f9141543/me2uv8xk95n010sdwz.png" class="h-6" draggable="false"> <span>Cloudflare</span></div></a>
@@ -136,14 +135,14 @@
     </div>
 </main>
 <footer class="center-h fullwidth">
-    <span style="color: rgba(255, 255, 255, 0.637);" data-translate="madeby">Made with Bootstrap, jQuery, and <span style="color: rgb(255, 101, 101);">&hearts;</span> by me</span>
+    <span style="color: rgba(255, 255, 255, 0.637);" data-translate="madeby">Made with Bootstrap and <span style="color: rgb(255, 101, 101);">&hearts;</span> by me</span>
 </footer>
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/js/script.js"></script>
-<script src="/js/index.js"></script>
-<script src="/js/counter.js"></script>
-<script src="/js/translations/indexTranslations.js"></script>
-<script src="/assets/js/snippets.js"></script>
+<script src="./js/script.js"></script>
+<script src="./js/index.js"></script>
+<script src="./js/counter.js"></script>
+<script src="./assets/translations/indexTranslations.js"></script>
+<script src="./assets/js/snippets.js"></script>
 </body>
 </html>
