--- a/nometa.html
+++ b/nometa.html
@@ -7,14 +7,14 @@
     <meta author="dontkillme">
     <!-- Links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/nometa.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nometa.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+    <link rel="manifest" href="./assets/site.webmanifest">
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <!-- Styles -->
@@ -69,7 +69,7 @@
                     <div class="first">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/johndoeprofile">John Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">4:48 PM</span></li>
@@ -80,7 +80,7 @@
                     <div class="second">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/janedoeprofile">Jane Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">4:59 PM</span></li>
@@ -91,7 +91,7 @@
                     <div class="third">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/johndoeprofile">John Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">5:00 PM</span></li>
@@ -102,7 +102,7 @@
                     <div class="third">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/janedoeprofile">Jane Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">5:15 PM</span></li>
@@ -124,7 +124,7 @@
                     <div class="first">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_male.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/johndoeprofile">John Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">4:48 PM</span></li>
@@ -135,7 +135,7 @@
                     <div class="second">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/janedoeprofile">Jane Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">4:59 PM</span></li>
@@ -146,7 +146,7 @@
                     <div class="second">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/johndoeprofile">John Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">5:00 PM</span></li>
@@ -157,7 +157,7 @@
                     <div class="second">
                         <div class="attributes">
                             <div class="avatar">
-                                <img src="/assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
+                                <img src="./assets/images/blank_profile_female.png" width="40px" class="rounded-circle">
                             </div>
                             <ul style="list-style-type: none;display:flex;flex-direction: column;columns: 2;gap: 3px;">
                                 <li><span class="name"><a href="/janedoeprofile">Jane Doe</a></span>&nbsp;<span class="time" style="color: rgb(75, 75, 75);">5:01 PM</span></li>
@@ -183,8 +183,8 @@
 </main>
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/js/script.js"></script>
-<script src="/js/nometa.js"></script>
-<script src="/js/translations/noMetaTranslation.js"></script>
+<script src="./js/script.js"></script>
+<script src="./js/nometa.js"></script>
+<script src="./assets/translations/noMetaTranslation.js"></script>
 </body>
 </html>
