--- a/errors/404.html
+++ b/errors/404.html
@@ -29,12 +29,11 @@
 <body>
     <div class="container">
         <h1>Oops! We got a some problems!</h1>
-        <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please report it by clicking on the buttons below.</p>
+        <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please DM me in Discord.</p>
         <div class="button-container">
             <a href="https://discordapp.com/users/531462564304125962" role="button"><button class="btn btn-dark btn-lg"><i class="fab fa-discord" aria-hidden="true"></i> Discord</button></a>
-            <a href="https://t.me/m/kZePPo93OTIy" role="button"><button class="btn btn-dark btn-lg"><i class="fab fa-telegram" aria-hidden="true"></i> Telegram</button></a>
-            <a class="btn btn-dark btn-lg" onclick="goBack()" role="button"><i class="fas fa-circle-left"></i> Go back</a>
-            <a href="../" role="button"><button class="btn btn-dark btn-lg"><i class="fas fa-circle-left"></i> Go to main page</button></a>
+            <a class="btn btn-dark btn-lg" onclick="goBack()" role="button"><i class="fas fa-caret-left"></i> Go back</a>
+            <a href="../" role="button"><button class="btn btn-dark btn-lg"><i class="fa fa-backward" aria-hidden="true"></i> Go to main page</button></a>
         </div>
     </div>
 <!-- Scripts -->
